--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 	Yes this website is working.
+	<script type="text/javascript">
+    		window.location.href = "http://localhost";
+	</script>
 
 </body>
 </html>
