--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	Yes this website is working.
 	<script type="text/javascript">
-    		window.location.href = "http://localhost";
+    		window.location.href = "http://13.232.50.157";
 	</script>
 
 </body>
